--- a/apps/templates/home/charts.html
+++ b/apps/templates/home/charts.html
@@ -80,7 +80,7 @@
               <div class="float-end"><a href="http://www.chartjs.org" target="_blank">docs</a></div>
             </div>
             <div class="card-body">
-              <div class="c-chart-wrapper">
+              <div class="c-chart-wrapper" style="height:100px;">
                 <canvas id="canvas-6"></canvas>
               </div>
             </div>
